--- a/app/src/main/res/layout/cart_card_view.xml
+++ b/app/src/main/res/layout/cart_card_view.xml
@@ -3,9 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="2dp"
+    app:cardCornerRadius="15dp"
     app:cardElevation="8dp"
-    android:layout_marginTop="2dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="5dp"
     android:paddingLeft="2dp"
     android:paddingRight="2dp">
 
@@ -76,8 +79,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/delete_icon"
-                android:layout_marginLeft="-30dp"
-                android:layout_marginTop="18dp"
+                android:layout_marginLeft="-32dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/med_details"
                 android:backgroundTint="@color/teal_700"
                 android:text="Qty 20"
