cart ui completed

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -192,9 +192,10 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/shop_recyclerview"
                     android:layout_width="match_parent"
-                    android:layout_height="620dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
+                    android:nestedScrollingEnabled="false"
                     android:layout_marginEnd="10dp" />
 
             </LinearLayout>
