--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,18 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CartActivity.Cart"
+    android:background="@color/lightWhite"
     android:orientation="vertical"
-    android:background="@color/lightWhite">
+    tools:context=".CartActivity.Cart">
 
     <LinearLayout
+        android:id="@+id/empty_cart_layout"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="400dp"
+                android:src="@drawable/emptycart"
+                app:layout_constraintBottom_toTopOf="@+id/button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.492" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="@color/teal_700"
+                android:onClick="ShopNow"
+                android:text="Shop Now"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:layout_editor_absoluteX="10dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/teal_700"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="@id/mainlayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,11 +69,11 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_baseline_arrow_back_24"
-                android:layout_marginTop="12dp"
                 android:layout_marginStart="2dp"
-                app:tint="@color/white"
-                android:onClick="GoBack"/>
+                android:layout_marginTop="12dp"
+                android:onClick="GoBack"
+                android:src="@drawable/ic_baseline_arrow_back_24"
+                app:tint="@color/white" />
 
             <TextView
                 android:id="@+id/item_count"
@@ -43,50 +88,79 @@
         </LinearLayout>
     </LinearLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="700dp">
 
-        <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/cart_scrollview"
+        android:layout_marginBottom="5dp"
+        android:layout_width="411dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.809"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintVertical_bias="0.814">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/innerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cartitem_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"/>
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <View
+                android:id="@+id/view"
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="4dp"
-                android:background="@color/teal_700" />
+                android:background="@color/teal_700"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cartitem_rv" />
 
             <TextView
+                android:id="@+id/addmore"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:drawableRight="@drawable/ic_baseline_add_circle_outline_24"
                 android:drawableTint="@color/teal_700"
                 android:onClick="OpenShop"
                 android:text="Add More items"
                 android:textColor="@color/teal_700"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cartitem_rv" />
 
             <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
+                android:id="@+id/line"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
                 android:layout_marginTop="4dp"
-                android:background="@color/teal_700" />
+                android:background="@color/teal_700"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/addmore" />
 
             <LinearLayout
+                android:id="@+id/addressdetailsview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="@id/line"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -97,13 +171,6 @@
                     android:textColor="@color/teal_700"
                     android:textSize="20sp" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -112,69 +179,87 @@
                     android:text="Your Location"
                     android:textColor="@color/teal_700" />
 
-                    <TextView
-                        android:id="@+id/currentlocation"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:ellipsize="end"
-                        android:scrollHorizontally="true"
-                        android:singleLine="true"
-                        android:text="Chudiala"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
+                <TextView
+                    android:id="@+id/currentlocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:ellipsize="end"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:text="Chudiala"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
 
-                    <EditText
-                        android:id="@+id/complete_address"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="10dp"
-                        android:hint="Complete Address*"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/black"
-                        />
+                <EditText
+                    android:id="@+id/complete_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:hint="Complete Address"
+                    android:singleLine="true"
+                    android:imeOptions="actionNext"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black" />
             </LinearLayout>
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+
+    <TextView
+        android:layout_marginTop="5dp"
+        android:id="@+id/textView"
+        android:layout_width="70dp"
+        android:layout_marginStart="3dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="Amount"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/cart_value"
+        app:layout_constraintEnd_toStartOf="@+id/add_address"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <TextView
+        android:id="@+id/cart_value"
+        android:layout_width="70dp"
+        android:layout_marginStart="3dp"
+        android:layout_height="wrap_content"
+        android:text="Rs. 456"
+        android:layout_marginBottom="7dp"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/add_address"
+        app:layout_constraintStart_toStartOf="parent" />
 
-            <TextView
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="Amount"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
+    <Button
+        android:layout_marginTop="5dp"
+        android:id="@+id/add_address"
+        android:layout_width="304dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/white"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="@color/teal_700"
+        android:text="Add Address"
+        app:layout_constraintBottom_toBottomOf="@id/mainlayout"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                android:id="@+id/cart_value"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="Rs. 456"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
-        </LinearLayout>
+    <Button
+        android:layout_marginTop="5dp"
+        android:id="@+id/proceed_checkout"
+        android:layout_width="304dp"
+        android:layout_marginEnd="10dp"
+        android:textColor="@color/white"
+        android:layout_height="0dp"
+        android:backgroundTint="@color/teal_700"
+        android:text="Proceed To Checkout"
+        app:layout_constraintBottom_toBottomOf="@id/mainlayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"/>
 
-        <Button
-            android:id="@+id/view_cart"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:backgroundTint="@color/teal_700"
-            android:text="Add Address" />
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
