--- a/app/src/main/res/layout/activity_shop_inventory.xml
+++ b/app/src/main/res/layout/activity_shop_inventory.xml
@@ -202,7 +202,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -227,10 +227,11 @@
         <Button
             android:id="@+id/view_cart"
             android:layout_width="280dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:backgroundTint="@color/teal_700"
             android:text="View Cart"
+            android:layout_gravity="bottom"
             android:textColor="@color/white"/>
 
     </LinearLayout>
