--- a/app/src/main/res/layout/activity_manage_order.xml
+++ b/app/src/main/res/layout/activity_manage_order.xml
@@ -16,10 +16,7 @@
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingBottom="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingBottom="10dp">
 
         <ImageView
             android:layout_width="40dp"
