--- a/app/src/main/res/layout/activity_forget_password_success_message.xml
+++ b/app/src/main/res/layout/activity_forget_password_success_message.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password Updated"
+            android:textColor="@color/black"
             android:textSize="40sp"
             android:layout_marginTop="-30sp"
             android:fontFamily="@font/bungee"
@@ -35,6 +36,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="Your password has been updated"
             android:textSize="16sp"
             android:textAlignment="center"
